--- a/exercice/index.html
+++ b/exercice/index.html
@@ -5,27 +5,35 @@
         <meta name="viewport" content="width=device-width,initial scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
-        <title></title>
+        <title>JuxtaposeJS</title>
     </head>
     <body>
         <h2>L'ordinateur</h2>
             <iframe class="juxtapose" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=cc4da18a-ef9b-11e6-8b75-0edaf8f81e27"></iframe>
-            <div class=p>En janvier 1980, le constructeur américain Hewlett-Packard commercialise son HP-85, un ordinateur « tout en un », incluant donc un clavier, une unité centrale, un écran (5 pouces), mais aussi une imprimante thermique à rouleau dans un même boîtier.
-            De nos jours, *les ordinateurs sont plus compacts. Certains ont l'écran tactile pouvant se détacher du clavier ce qui fait d'eux des ordinateurs hybrides.</p></div>
-            <hr />
-            <div class="clear"></div>
+            <div class="p">En janvier 1980, le constructeur américain Hewlett-Packard commercialise son HP-85, un ordinateur « tout en un », incluant donc un clavier, une unité centrale, un écran (5 pouces), mais aussi une imprimante thermique à rouleau dans un même boîtier.
+            De nos jours, les ordinateurs sont plus compacts. Certains ont l'écran tactile pouvant se détacher du clavier ce qui fait d'eux des ordinateurs hybrides.</p></div>
 
+            <div class="clear"></div>
+            <hr />
 
 
         <h2>Le téléphone portable</h2>
             <iframe class="juxtapose" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=25824650-efa3-11e6-8b75-0edaf8f81e27"></iframe>
             <div class="p">Plus compact au fil du temps. Les touches sont abandonnées au profit du tactile.</P></div>
-            <hr />
+
             <div class="clear"></div>
+            <hr />
 
 
         <h2>La télévision</h2>
             <iframe  class="juxtapose" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=a030d190-efa4-11e6-8b75-0edaf8f81e27"></iframe>
+            <div class="p">Ici encore, le format devient plus compact.
+                La technologie a évolué à grande vitesse : la qualité d'image, le design, le son et depuis peu les services connectés font du televiseur un appareil technologique de pointe...
+            </p></div>
+
+            <div class="clear"></div>
+
+            </div>
 
 
     </body>
